fix: fix structure and npmrc scope

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@move-ui:registry=https://reg.internal-stuff.org
+@internal-ui:registry=https://reg.internal-stuff.org
 registry=https://registry.npmjs.org
