--- a/apps/inventory/features/inline-edit/package.json
+++ b/apps/inventory/features/inline-edit/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@dealer-central/promotion-feature",
+  "name": "@dealer-central/inline-edit-feature",
   "version": "1.0.0",
   "main": "src/index.ts",
   "dependencies": {
-    "@internal-ui/button": "1.2.3",
-    "@internal-ui/dropdown": "2.2.3"
+    "@dealer-central/dealership-contract": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0"
