--- a/shared/contracts/dealerships/package.json
+++ b/shared/contracts/dealerships/package.json
@@ -4,6 +4,6 @@
   "main": "src/index.ts",
   "dependencies": {},
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   }
 }
