chore: add packages that are in the internal registry

--- a/apps/inventory/features/promotions/package.json
+++ b/apps/inventory/features/promotions/package.json
@@ -2,7 +2,10 @@
   "name": "@dealer-central/promotion-feature",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "dependencies": {},
+  "dependencies": {
+    "@internal-ui/button": "1.2.3",
+    "@internal-ui/dropdown": "2.2.3"
+  },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   }
