--- a/apps/inventory/features/inline-edit/package.json
+++ b/apps/inventory/features/inline-edit/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "dependencies": {
+    "@internal-ui/button": "1.2.3",
+    "@internal-ui/text": "1.3.3",
+    "@internal-ui/dropdown": "2.2.3",
     "@dealer-central/dealership-contract": "^1.0.0"
   },
   "peerDependencies": {
