--- a/apps/inventory/main/package.json
+++ b/apps/inventory/main/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "dependencies": {
+    "@internal-ui/text": "1.3.3",
     "@dealer-central/inline-edit-feature": "^1.0.0",
     "@dealer-central/promotion-feature": "^1.0.0",
     "@dealer-central/dealership-contract": "^1.0.0"
