--- a/shell/main/package.json
+++ b/shell/main/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "dependencies": {
+    "@internal-ui/layout": "1.2.9",
     "@dealer-central/inventory-app": "^1.0.0",
     "@dealer-central/dealership-contract": "^1.0.0"
   },
