--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@internal-ui:registry=https://reg.internal-stuff.org
+@internal-ui:registry=https://registry.yarnpkg.com
 registry=https://registry.npmjs.org
